tests/fixtures/invalid/pow_str_bytes_bytes.py
# Cannot call pow() with Str, Bytes, Bytes
x = pow("hello", b"hello", b"hello")
